# nrf70-bm

./: .gitmodules  README.md  build-docs.sh  west.yml
.github/workflows/: docbuild.yml
nrf70_bm_lib/: CMakeLists.txt  Kconfig
nrf70_bm_lib/docs/: Doxyfile
nrf70_bm_lib/docs/source/: conf.py  index.rst  nrf70_bm_api.rst  nrf70_bm_lib.rst  nrf70_bm_lib_migration_guide.rst  nrf70_bm_porting_guide.rst  nrf70_osal_doc.rst  samples.rst
nrf70_bm_lib/include/: nrf70_bm_lib.h
nrf70_bm_lib/include/common/: nrf70_bm_core.h  nrf70_bm_lib.h  nrf70_bm_tx_pwr_ceil_dk.h  nrf70_bm_tx_pwr_ceil_ek.h
nrf70_bm_lib/include/radio_test/: nrf70_bm_core.h  nrf70_bm_lib.h
nrf70_bm_lib/include/system/: nrf70_bm_core.h  nrf70_bm_lib.h
nrf70_bm_lib/source/: nrf70_bm_core.c  nrf70_bm_lib.c
nrf70_bm_lib/source/common/: nrf70_bm_core.c
nrf70_bm_lib/source/radio_test/: nrf70_bm_core.c  nrf70_bm_lib.c
nrf70_bm_lib/source/system/: nrf70_bm_core.c  nrf70_bm_lib.c
nrf70_zephyr_shim/: CMakeLists.txt  Kconfig
nrf70_zephyr_shim/include/: qspi_if.h  rpu_hw_if.h  shim.h  spi_if.h
nrf70_zephyr_shim/source/bus/: device.c  qspi_if.c  spi_if.c
nrf70_zephyr_shim/source/os/: shim.c  work.c
nrf70_zephyr_shim/source/platform/: rpu_hw_if.c
samples/radio_test_bm/: CMakeLists.txt  Kconfig  prj.conf  sample.yaml  sysbuild.conf
samples/radio_test_bm/inc/: nrf_wifi_radio_test_shell.h
samples/radio_test_bm/src/: nrf_wifi_ficr_prog.c  nrf_wifi_radio_ficr_shell.c  nrf_wifi_radio_test_main.c  nrf_wifi_radio_test_shell.c
samples/scan_bm/: CMakeLists.txt  Kconfig
samples/scan_bm/src/: main.c  utils.c  wifi_util.c
samples/scan_rt_bm/: CMakeLists.txt  Kconfig  overlay-shell.conf  prj.conf  sample.yaml
samples/scan_rt_bm/src/: main.c  utils.h
tests/bustest/: CMakeLists.txt  prj.conf
tests/bustest/src/: main.c
